--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
+certifi==2017.7.27.1
+chardet==3.0.4
 click==6.7
 Flask==0.12.2
 Flask-SQLAlchemy==2.3.2
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
 psycopg2==2.7.3.1
-PyGithub==1.35
 PyJWT==1.5.3
+requests==2.18.4
 SQLAlchemy==1.1.14
+uritemplate==3.0.0
+uritemplate.py==3.0.2
+urllib3==1.22
 Werkzeug==0.12.2
